syntax = "proto3";

package usercenter.api.usercenter.field.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "usercenter.api.usercenter.field.v1";
option java_outer_classname = "FieldV1";

import "validate/validate.proto";

message ListFieldTypeRequest{

}

message ListFieldTypeReply{
  message Type{
    string type = 1;
    string name = 2;
  }
  repeated Type list=1;
}

message ListFieldRequest {
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 pageSize = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string order = 3[(validate.rules).string = {in: ["asc","desc"]}];
  optional string orderBy = 4[(validate.rules).string = {in: ["id","created_at"]}];
  optional string keyword = 5;
  optional string name = 6;
  optional bool status = 7;
}

message ListFieldReply {
  message Field {
    uint32 id = 1;
    string keyword = 2;
    string type = 3;
    string name = 4;
    optional bool status = 5;
    optional string description = 6;
    uint32 createdAt = 7;
    uint32 updatedAt = 8;
  }

  uint32 total = 1;
  repeated Field list = 2;
}

message CreateFieldRequest {
  string keyword = 1[(validate.rules).string = {min_len: 1}];
  string type = 2[(validate.rules).string = {min_len: 1}];
  string name = 3[(validate.rules).string = {min_len: 1}];
  optional string description = 4;
}

message CreateFieldReply {
  uint32 id = 1;
}

message UpdateFieldRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
  string keyword = 2[(validate.rules).string = {min_len: 1}];
  string type = 3[(validate.rules).string = {min_len: 1}];
  string name = 4[(validate.rules).string = {min_len: 1}];
  optional string description = 5;
}

message UpdateFieldReply {
}

message UpdateFieldStatusRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
  bool status = 2;
}

message UpdateFieldStatusReply {
}
 
message DeleteFieldRequest {
  repeated uint32 ids = 1[(validate.rules).repeated = {min_items: 1, unique:true, max_items:50}];
}

message DeleteFieldReply {
  uint32 total = 1;
}

